--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,7 +1,5 @@
-spring.application.name=calorieservice
-spring.datasource.url=jdbc:h2:mem:calorieservice
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
-spring.datasource.initialize=true
