--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,9 @@
-spring.application.name=calorieservice
+# Configuração da porta do servidor
+server.port=9090
+# Configurações do serviço de autenticação
+auth.service.url=http://localhost:8080
+
+# Configurações do banco de dados H2
 spring.datasource.url=jdbc:h2:mem:calorieservice
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
