--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -3,3 +3,5 @@ spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
+auth.service.url=http://localhost:8080
+
