--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 	<description>Project Calorie Service</description>
 	<properties>
 		<java.version>21</java.version>
+		<sonar.organization>lucasenogueira</sonar.organization>
+		<sonar.host.url>https://sonarcloud.io</sonar.host.url>
 	</properties>
 	<dependencies>
 		<dependency>
