--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
-server.port=9090
-auth.service.url=http://localhost:8080
+server.port=8083
+auth.service.url=http://auth:8080
 spring.datasource.url=jdbc:h2:mem:calorieservice
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=password
 spring.h2.console.enabled=true
 spring.datasource.initialize=true
+management.endpoints.web.exposure.include=*
+management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+spring.profiles.active=dev
