--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,21 @@ jobs:
     steps:
       - name: Deploy to dev
         run: echo "Deploying to Dev"
+        
+      - name: Check env variable is created
+        run: |
+          if [ -z "${{ env.RELEASE }}" ]; then
+            echo "RELEASE=v1.0.0" >> $GITHUB_ENV
+          fi
+          
+      - name: Check and update project version
+        run: |
+          STRING="${{ github.event.head_commit.message }}"
+          if [[ "$STRING" == *"Release"* ]]; then
+            echo "Contains Release"
+            RELEASE_STRING="${STRING#*Release }"
+            echo "RELEASE=$RELEASE_STRING" >> $GITHUB_ENV
+          fi
 
       - uses: actions/checkout@v4
       - name: Set up JDK 21
@@ -59,7 +74,25 @@ jobs:
           cache: maven
 
       - name: Run tests with Maven
-        run: mvn test
+        run: mvn test 
+        
+      - name: Docker Login
+        uses: docker/login-action@v3.2.0
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: List files in root directory
+        run: ls -al
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.1.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            lucasnogueira1325/ese-calorieservice:${{ env.RELEASE }}
 
   deploy-staging:
     needs: build
@@ -69,6 +102,20 @@ jobs:
       - name: Deploy to staging
         run: echo "Deploying to Staging"
 
+      - name: Check env variable is created
+        run: |
+          if [ -z "${{ env.RELEASE }}" ]; then
+            echo "RELEASE=v1.0.0" >> $GITHUB_ENV
+          fi
+          
+      - name: Check and update project version
+        run: |
+          STRING="${{ github.event.head_commit.message }}"
+          if [[ "$STRING" == *"Release"* ]]; then
+            echo "Contains Release"
+            RELEASE_STRING="${STRING#*Release }"
+            echo "RELEASE=$RELEASE_STRING" >> $GITHUB_ENV
+          fi
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -97,6 +144,24 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Needed to get PR information, if any
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=LucaseNogueira_calorie-service
+          
+      - name: Docker Login
+        uses: docker/login-action@v3.2.0
+        with:
+          username: ${{ secrets.DOCKER_USER }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: List files in root directory
+        run: ls -al
+
+      - name: Build and push Docker images
+        uses: docker/build-push-action@v6.1.0
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            lucasnogueira1325/ese-calorieservice:${{ env.RELEASE }}
 
   deploy-main:
     needs: build
@@ -106,6 +171,20 @@ jobs:
       - name: Deploy to main
         run: echo "Deploying to main"
 
+      - name: Check env variable is created
+        run: |
+          if [ -z "${{ env.RELEASE }}" ]; then
+            echo "RELEASE=v1.0.0" >> $GITHUB_ENV
+          fi
+          
+      - name: Check and update project version
+        run: |
+          STRING="${{ github.event.head_commit.message }}"
+          if [[ "$STRING" == *"Release"* ]]; then
+            echo "Contains Release"
+            RELEASE_STRING="${STRING#*Release }"
+            echo "RELEASE=$RELEASE_STRING" >> $GITHUB_ENV
+          fi
       - uses: actions/checkout@v4
       - name: Set up JDK 21
         uses: actions/setup-java@v3
@@ -151,7 +230,7 @@ jobs:
           file: ./Dockerfile
           push: true
           tags: |
-            lucasnogueira1325/ese-calorieservice:v1
+            lucasnogueira1325/ese-calorieservice:${{ env.RELEASE }}
             
       - name: Logout from Docker Hub
         run: docker logout
